* get orders controller added * initialisation data in db extended

--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -25,13 +25,13 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header">
-                        <a th:text="${'Заказ №'+order.id()}" th:href="${'/orders/'+order.id()}"></a>
+                        <a th:text="${'Заказ №'+order.id}" th:href="${'/orders/'+order.id}"></a>
                     </div>
-                    <ul class="list-group list-group-flush" th:each="item : ${order.items()}">
-                        <li class="list-group-item" th:text="${item.title()+' ('+item.count()+' шт.) '+(item.price()*item.count())+' руб.'}"/>
+                    <ul class="list-group list-group-flush" th:each="item : ${order.items}">
+                        <li class="list-group-item" th:text="${item.title+' ('+item.count+' шт.) '+(item.price*item.count)+' руб.'}"/>
                     </ul>
                     <div class="card-footer">
-                        <b th:text="${'Сумма: '+order.totalSum()}+' руб.'"></b>
+                        <b th:text="${'Сумма: '+order.totalSum}+' руб.'"></b>
                     </div>
                 </div>
             </div>
