--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -36,17 +36,22 @@
                         </select>
                         <label for="sort">Сортировка</label>
                     </div>
-                    <div class="form-floating w-25">
-                        <select class="form-select" id="pageSize" name="pageSize" onchange="document.getElementById('main').submit()" form="main">
-                            <option value="2" th:selected="${paging.pageSize==2}">2</option>
-                            <option value="5" th:selected="${paging.pageSize==5}">5</option>
-                            <option value="10" th:selected="${paging.pageSize==10}">10</option>
-                            <option value="20" th:selected="${paging.pageSize==20}">20</option>
-                            <option value="50" th:selected="${paging.pageSize==50}">50</option>
-                            <option value="100" th:selected="${paging.pageSize==100}">100</option>
-                        </select>
-                        <label for="pageSize">На странице</label>
-                    </div>
+<!--                    <div class="form-floating w-25">-->
+<!--                        <select class="form-select"-->
+<!--                                id="pageSize"-->
+<!--                                name="pageSize"-->
+<!--                                th:value="${paging.pageSize()}"-->
+<!--                                onchange="document.getElementById('main').submit()"-->
+<!--                                form="main">-->
+
+<!--                            <option th:each="size : ${pageSizes}"-->
+<!--                                    th:value="${size}"-->
+<!--                                    th:text="${size}">-->
+<!--                            </option>-->
+
+<!--                        </select>-->
+<!--                        <label for="pageSize">На странице</label>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -82,11 +87,11 @@
         </div>
         <div class="row p-2">
             <div class="col">
-                <div class="hstack gap-3 justify-content-center">
-                    <button type="submit" class="btn btn-light" th:if="${paging.hasPrevious()}" name="pageNumber" th:value="${paging.pageNumber()-1}" form="main">&larr;</button>
-                    <span th:text="${'Страница: '+paging.pageNumber()}"></span>
-                    <button type="submit" class="btn btn-light" th:if="${paging.hasNext()}" name="pageNumber" th:value="${paging.pageNumber()+1}" form="main">&rarr;</button>
-                </div>
+<!--                <div class="hstack gap-3 justify-content-center">-->
+<!--                    <button type="submit" class="btn btn-light" th:if="${paging.hasPrevious()}" name="pageNumber" th:value="${paging.pageNumber()-1}" form="main">&larr;</button>-->
+<!--                    <span th:text="${'Страница: '+paging.pageNumber()}"></span>-->
+<!--                    <button type="submit" class="btn btn-light" th:if="${paging.hasNext()}" name="pageNumber" th:value="${paging.pageNumber()+1}" form="main">&rarr;</button>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
