--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -14,47 +14,29 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 
-<div class="container p-2">
-    <div class="row p-2">
-        <div class="col">
-            <div class="hstack gap-3">
-                <h2>
-                    <span class="badge text-bg-success">Витрина магазина</span>
-                </h2>
-                <a href="/orders" class="btn btn-secondary ms-auto bi bi-file-earmark-text"> Заказы</a>
-                <a href="/cart/items" class="btn btn-secondary bi bi-cart4"> Корзина</a>
-                <a href="/items" class="btn btn-secondary bi bi-arrow-left-square"> Главная</a>
+<h2 th:text="${'Заказ №' + order.id}"></h2>
+
+<div class="row p-2" th:each="item : ${order.items}">
+    <div class="col">
+        <div class="card">
+            <div class="card-header">
+                <b th:text="${item.item.title}"></b>
             </div>
-        </div>
-    </div>
-    <div class="row p-2">
-        <div class="col">
-            <h2 th:text="${'Заказ №'+order.id}"></h2>
-        </div>
-    </div>
-    <div class="row p-2" th:each="item : ${order.items}">
-        <div class="col">
-            <div class="card">
-                <div class="card-header">
-                    <b th:text="${item.title}"></b>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item" th:text="${item.count}+' шт.'"/>
-                    <li class="list-group-item" th:text="${item.price}+' руб.'"/>
-                </ul>
-                <div class="card-footer">
-                    <b th:text="${'Сумма: '+item.count*item.price}+' руб.'"></b>
-                </div>
+
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"
+                    th:text="${item.quantity + ' шт.'}"></li>
+
+                <li class="list-group-item"
+                    th:text="${item.priceAtPurchase + ' руб.'}"></li>
+            </ul>
+
+            <div class="card-footer">
+                <b th:text="${'Сумма: ' + item.subtotal + ' руб.'}"></b>
             </div>
-        </div>
-    </div>
-    <div class="row p-2">
-        <div class="col">
-            <h3 th:text="${'Сумма: '+order.totalSum}+' руб.'"></h3>
         </div>
     </div>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
 </body>
