--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -27,8 +27,10 @@
                     <div class="card-header">
                         <a th:text="${'Заказ №'+order.id}" th:href="${'/orders/'+order.id}"></a>
                     </div>
-                    <ul class="list-group list-group-flush" th:each="item : ${order.items}">
-                        <li class="list-group-item" th:text="${item.title+' ('+item.count+' шт.) '+(item.price*item.count)+' руб.'}"/>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item" th:each="item : ${order.items}">
+                            <span th:text="${item.item.title + ' (' + item.quantity + ' шт.) ' + item.subtotal + ' руб.'}"></span>
+                        </li>
                     </ul>
                     <div class="card-footer">
                         <b th:text="${'Сумма: '+order.totalSum}+' руб.'"></b>
