--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -36,22 +36,22 @@
                         </select>
                         <label for="sort">Сортировка</label>
                     </div>
-<!--                    <div class="form-floating w-25">-->
-<!--                        <select class="form-select"-->
-<!--                                id="pageSize"-->
-<!--                                name="pageSize"-->
-<!--                                th:value="${paging.pageSize()}"-->
-<!--                                onchange="document.getElementById('main').submit()"-->
-<!--                                form="main">-->
+                    <div class="form-floating w-25">
+                        <select class="form-select"
+                                id="pageSize"
+                                name="pageSize"
+                                th:value="${paging.pageSize()}"
+                                onchange="document.getElementById('main').submit()"
+                                form="main">
 
-<!--                            <option th:each="size : ${pageSizes}"-->
-<!--                                    th:value="${size}"-->
-<!--                                    th:text="${size}">-->
-<!--                            </option>-->
+                            <option th:each="size : ${pageSizes}"
+                                    th:value="${size}"
+                                    th:text="${size}">
+                            </option>
 
-<!--                        </select>-->
-<!--                        <label for="pageSize">На странице</label>-->
-<!--                    </div>-->
+                        </select>
+                        <label for="pageSize">На странице</label>
+                    </div>
                 </div>
             </div>
         </div>
@@ -87,11 +87,11 @@
         </div>
         <div class="row p-2">
             <div class="col">
-<!--                <div class="hstack gap-3 justify-content-center">-->
-<!--                    <button type="submit" class="btn btn-light" th:if="${paging.hasPrevious()}" name="pageNumber" th:value="${paging.pageNumber()-1}" form="main">&larr;</button>-->
-<!--                    <span th:text="${'Страница: '+paging.pageNumber()}"></span>-->
-<!--                    <button type="submit" class="btn btn-light" th:if="${paging.hasNext()}" name="pageNumber" th:value="${paging.pageNumber()+1}" form="main">&rarr;</button>-->
-<!--                </div>-->
+                <div class="hstack gap-3 justify-content-center">
+                    <button type="submit" class="btn btn-light" th:if="${paging.hasPrevious()}" name="pageNumber" th:value="${paging.pageNumber()-1}" form="main">&larr;</button>
+                    <span th:text="${'Страница: '+paging.pageNumber()}"></span>
+                    <button type="submit" class="btn btn-light" th:if="${paging.hasNext()}" name="pageNumber" th:value="${paging.pageNumber()+1}" form="main">&rarr;</button>
+                </div>
             </div>
         </div>
     </div>
